tmp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app
  labels:
    app: app
  namespace: pida-diego
spec:
  to:
    kind: Service
    name: app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  host: app-pida-diego.apps-crc.testing
  port:
    targetPort: 8080
